Twitter feed done

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -44,6 +44,11 @@
       defer
       src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2"
     ></script>
+    <script
+      async
+      src="https://platform.twitter.com/widgets.js"
+      charset="utf-8"
+    ></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
