--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,7 +32,7 @@
     <script async src="//www.instagram.com/embed.js"></script>
     <script>
       window.fbAsyncInit = function () {
-        console.log("Script Init");
+        // console.log("Script Init");
         FB.init({
           xfbml: true,
           version: "v7.0",
